--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,113 @@
-/* место для вашего кода */
+.header {
+  width: 100%;
+  height: 293px;
+}
+
+.menu-otn {
+    display: flex;
+}
+
+.list-marker-header {
+    
+}
+
+.logo-otn {
+
+}
+
+.address-otn {
+
+}
+
+.main {
+
+}
+
+.cover {
+  /* height: 100vh; */
+  background-image: url('/images/cover.jpg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.description {
+
+}
+
+.btn-see-all-lots {
+
+}
+
+.lots-otn {
+
+}
+
+.block-lots {
+
+}
+
+.block-lots__film {
+  background-image: url('/images/card-lot-01.jpg');
+  background-repeat: no-repeat;
+}
+
+.block-lots__book {
+  background-image: url('/images/card-lot-02.jpg');
+  background-repeat: no-repeat;
+}
+
+.block-lots__picture {
+  background-image: url('/images/card-lot-03.jpg');
+  background-repeat: no-repeat;
+}
+
+.footer {
+
+}
+
+.cover {
+
+}
+
+.description {
+
+}
+
+.bold-title {
+  font-family: Raleway;
+  font-weight: bold;
+  font-size: 40px;
+}
+
+.font-main {
+  font-family: Raleway;
+  font-size: 20px;
+}
+
+.list-marker-header {
+  list-style-type: circle;
+}
+
+/* .list-marker-footer {
+  если понадобиться, но удобнее
+  универсальным св-ом list-no-marker
+} */
+
+.list-no-marker {
+  list-style-type: none;
+}
+
+.font-list {
+  font-family: Ralewa /*TODO: yдопишиальтернативныйе шрифты после добавления файлов шрифтов*/;
+  font-size: 18px;
+}
+
+.font-list__underlined {
+  text-decoration: underline;
+}
+
+.overlay {
+  background-color: rgba(0, 0, 0, 0.6); /* черный фон, 60 % прозрачности
+  нужно наложить сверху через z-index наверх посмотри как  */
+}
