--- a/styles/global.css
+++ b/styles/global.css
@@ -5,6 +5,7 @@
 }
 
 body {
+  background-color: aquamarine;
   width: 1100px;
   margin: 0 auto;
   font-family: Raleway, sans-serif;
@@ -25,8 +26,14 @@ blockquote {
   padding: 0;
 }
 
+h1,
+h2 {
+  text-transform: uppercase;
+}
+
 a {
   color: inherit;
+  text-decoration: none;
 }
 
 img {
