--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,6 @@
+
+/* basic styles */
+
 .header {
   width: 100%;
   height: 293px;
@@ -51,16 +54,22 @@
 .block-lots__film {
   background-image: url('/images/card-lot-01.jpg');
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .block-lots__book {
   background-image: url('/images/card-lot-02.jpg');
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .block-lots__picture {
   background-image: url('/images/card-lot-03.jpg');
   background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .footer {
@@ -73,6 +82,15 @@
 
 .description {
 
+}
+
+/* for multiple use */
+
+.size-title-otn {
+  font-family: Raleway;
+  font-weight: bold;
+  font-size: 100px;
+  color: #fff;
 }
 
 .bold-title {
@@ -100,7 +118,8 @@
 }
 
 .font-list {
-  font-family: Ralewa /*TODO: yдопишиальтернативныйе шрифты после добавления файлов шрифтов*/;
+  font-family: Raleway;
+  font-weight: normal;
   font-size: 18px;
 }
 
