--- a/styles/style.css
+++ b/styles/style.css
@@ -2,49 +2,87 @@
 /* basic styles */
 
 .header {
+  display: grid;
+  grid-template-columns: 1fr min-content 1fr;
+  align-items: center; /* выравнивание по вертикали */
   width: 100%;
   height: 293px;
+  justify-content: space-between;
+  
+  background: #67bdb1;
 }
 
 .menu-otn {
-    display: flex;
+  margin-left: 50px;
 }
 
 .list-marker-header {
-    
-    
+  display: flex;      
+}
+
+.list-marker-header li {
+  margin-right: 32px; /* Расстояние между элементами */
+}
+
+.list-marker-header .list-marker-header-end {
+  margin-right: 0;
 }
 
 .logo-otn {
-
+  display: block;
+  width: 135px;
+  height: 105px; 
 }
 
 .address-otn {
-
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-style: normal;
+  max-width: 240px;
+  height: 98px;
+  margin-right: 50px;
+  justify-self: end;
+  line-height: 1.3;
 }
 
 .main {
-
+  background: #0f1fff;
 }
 
 .cover {
+  width: 100%;
+  height: 757px;
   /* height: 100vh; */
+  /* TODO: оптимизировать до background: #ff0000 url('image.jpg') no-repeat center / cover; */
   background-image: url('/images/cover.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  color: #fff;
+}
+
+.size-title-otn {
+  font-weight: bold;
+  font-size: 100px;
 }
 
 .description {
+  font-size: 22px;
+}
 
+.text-things {
+  font-weight: normal;
+  /* растянуть текст */
 }
 
 .btn-see-all-lots {
-
+  font-weight: 500;
+  /* снести базовые стили кнопки */
 }
 
 .lots-otn {
-
+  
 }
 
 .block-lots {
@@ -73,25 +111,14 @@
 }
 
 .footer {
-
+  background: #1df539;
 }
 
-.cover {
-
-}
-
-.description {
-
+.list-marker-footer {
+  /* если понадобиться */
 }
 
 /* for multiple use */
-
-.size-title-otn {
-  font-family: Raleway;
-  font-weight: bold;
-  font-size: 100px;
-  color: #fff;
-}
 
 .bold-title {
   font-family: Raleway;
@@ -100,7 +127,6 @@
 }
 
 .font-main {
-  font-family: Raleway;
   font-size: 20px;
 }
 
@@ -118,13 +144,13 @@
 }
 
 .font-list {
-  font-family: Raleway;
   font-weight: normal;
   font-size: 18px;
 }
 
 .font-list__underlined {
   text-decoration: underline;
+  text-underline-offset: 4px; /* сделать полосу чуть ниже */
 }
 
 .overlay {
