--- a/styles/global.css
+++ b/styles/global.css
@@ -8,7 +8,7 @@ body {
   background-color: aquamarine;
   width: 1100px;
   margin: 0 auto;
-  font-family: Raleway, Arial, sans-serif;
+  font-family: Raleway, sans-serif; /* Arial, добавь при необходимости */
 }
 
 h1,
