--- a/styles/style.css
+++ b/styles/style.css
@@ -1,19 +1,25 @@
 
 /* basic styles */
 
+/* header */
+
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
+  grid-template-rows: auto;
   align-items: center; /* выравнивание по вертикали */
   width: 100%;
-  height: 293px;
+  min-height: 293px;
   justify-content: space-between;
+  text-underline-offset: 4px;
   
   background: #67bdb1;
 }
 
 .header__menu-otn {
-  margin-left: 50px;
+  /* margin-left: 50px;
+  margin-top: -5px; */
+  margin: -5px 0 0 50px;
 }
 
 .list-marker-header {
@@ -34,21 +40,26 @@
   /* height: 105px;  */
 }
 
-.address-otn {
+.header__address-otn {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   font-style: normal;
   max-width: 240px;
-  height: 98px;
+  min-height: 98px;
   margin-right: 50px;
   justify-self: end;
   line-height: 1.3;
+  gap: 2px;
 }
+
+/* main */
 
 .main {
   background: #0f1fff;
 }
+
+/* cover */
 
 .cover {
   position: relative;
@@ -56,17 +67,18 @@
   min-height: 757px;
   /* height: 100vh; */
   /* TODO: оптимизировать до background: #ff0000 url('image.jpg') no-repeat center / cover; */
-  background-image: url('/images/cover.jpg');
+  /* background-image: url('/images/cover.jpg');
   background-repeat: no-repeat;
   background-position: center;
-  background-size: cover;
+  background-size: cover; */
+  background: url('/images/cover.jpg') no-repeat center / cover;
   color: #fff;
 }
 
 .cover__size-title-otn {
   /* display: flex; */
   /* flex-wrap: wrap; */
-  justify-content: space-between;
+  /* justify-content: space-between; */
   font-weight: bold;
   min-height: 385px;
   width: 100%;
@@ -87,16 +99,25 @@
   /* letter-spacing: 30px; */
 }
 
-.cover__span__center {
-  /* margin: auto; */
-  text-align: center;
+.cover__span-start {
+  margin-top: -6px;
 }
 
-.cover__span__end {
+.cover__span-center {
+  /* margin: auto; */
+  text-align: center;
+  padding-left: 28px;
+  padding-top: 3px;
+  /* padding-top: 1px;
+  padding-left: 1px;
+  padding-bottom: 1px;
+  padding-right: 1px; */
+}
+
+.cover__span-end {
   text-align: right;
-  /* margin-right: 0; */
-  /*margin-top: auto;*/
-  /*padding-right: 5px; */
+  margin-right: -30px;
+  margin-top: 5px;
 }
 
 .description {
@@ -104,7 +125,7 @@
   justify-content: space-between;
   align-items: center;
   max-width: 1000px;
-  margin: 101px auto 0;
+  margin: 98px auto 0;
   font-size: 22px;
   background: rgba(240, 16, 16, 0.6);
 }
@@ -123,46 +144,192 @@
   color: inherit;
   text-transform: inherit;
   font-weight: 500;
-  /* снести базовые стили кнопки */
 }
 
+/* lots-otn */
+
 .lots-otn {
+  width: 100%;
+  max-width: 1052px;
+  min-height: 723px;
+  margin: 0 auto;
+}
+
+.lots__title {
+  padding: 0 0 27px 40px;
+}
+
+.lots__card-list {
+  display: flex;
+  gap: 25px;
+  flex-wrap: wrap;
+}
+
+.card__lots {
+  width: 100%;
+  max-width: 334px;
+  min-height: 596px;
+  color: #fff;
+}
+
+.card-link {
+  height: 100%;
+}
+
+.card__article {
+  display: flex;
+  position: relative; 
+  flex-direction: column;           
+  justify-content: space-between;   
+  align-items: center; 
+  padding: 48px 40px;
+  height: 100%;
   
 }
 
-.block-lots {
-
+.card__text {
+  z-index: 2;
 }
 
-/* TODO: class for all h2 lots */
+.card__title {
+  font-size: 22px;
+  text-underline-offset: 3px;
+}
 
 .block-lots__film {
-  background-image: url('/images/card-lot-01.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background: 
+  url('/images/card-lot-01.jpg') 
+  no-repeat center / cover;
 }
 
 .block-lots__book {
-  background-image: url('/images/card-lot-02.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background: 
+  url('/images/card-lot-02.jpg') 
+  no-repeat center / cover;
 }
 
 .block-lots__picture {
-  background-image: url('/images/card-lot-03.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  background: 
+  url('/images/card-lot-03.jpg') 
+  no-repeat center / cover;
 }
 
+.lots__look-more-link__p {
+  padding: 30px 0 0 40px;
+}
+
+.lots__look-more-link__link {
+  text-underline-offset: 5px;  
+}
+
+/* about-auction */
+
+.about-auction {
+  display: grid;
+  grid-template-columns: 334px 1fr;
+  grid-template-rows: auto;
+  width: 100%;
+  max-width: 1052px;
+  min-height: 595px;
+  margin: 0 auto;
+
+  background: #eafa0a;
+}
+
+.block-logo-white {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 240px;
+  height: 240px;
+  border-radius: 50%; /* откругляет конец у фона*/
+  margin: 35px auto 0;
+  background: #000;
+}
+
+.block-logo-white__black-background{
+  display: block;
+  width: 148px;
+}
+
+.about__column {
+  display: flex;
+  flex-direction:column;
+  justify-content: space-between;
+  word-wrap: break-word; /* разрешает перенос длинных слов */
+  width: 100%;
+  max-width: 693px;
+  min-height: 452px;
+  /* margin-top: 133px;
+  margin-left: 25px; */
+  margin: 133px 0 0 25px;
+
+  background: #ff8800;
+}
+
+.about__title {
+  padding: 3px 0 100px;
+}
+
+.about__text {
+  display: flex;
+  flex-direction:column;
+  justify-content: space-between;
+  gap: 24px;
+}
+
+/* footer */
+
 .footer {
+  display: grid;
+  grid-template-columns: 292px 164px 240px; /* 265px 164px 240px; */
+  grid-template-rows: auto;
+  justify-content: space-between;
+  padding: 0 50px;
+  min-height: 180px;
+  width: 100%;
+  /* text-underline-offset: 5px;  */
+
   background: #1df539;
 }
 
-.list-marker-footer {
-  /* если понадобиться */
+.footer__address-otn {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-style: normal;
+  /* max-width: 265px; */
+  min-height: 98px;
+  /* margin-right: 50px;
+  margin-top: 0px; */
+  margin: 0 50px 0 0;
+  justify-self: end;
+  line-height: 1.3;
+  text-underline-offset: 5px; 
+}
+
+.footer__menu {
+  margin-left: -52px;
+  margin-top: 2px;
+}
+
+.footer__menu-list {
+  text-align: center;
+}
+
+.footer__menu-list-item {
+  text-underline-offset: 2px; 
+}
+
+.footer__social-list-item {
+  display: flex;
+  justify-content: space-between;
+  gap: 48px;
+}
+
+.footer__social-icon {
+  display: block;
+  width: 48px;
 }
 
 /* for multiple use */
@@ -175,6 +342,7 @@
 
 .font-main {
   font-size: 20px;
+  line-height: 1.2em;
 }
 
 .list-marker-header {
@@ -201,18 +369,27 @@
 
 .font-list__underlined {
   text-decoration: underline;
-  text-underline-offset: 4px; /* сделать полосу чуть ниже */
+  text-decoration-thickness: 1px;
+  /* text-underline-offset: 3px; чтобы сделать полоску выше или ниже */
 }
 
-.indent-block {
+.indent-block-big {
   margin-bottom: 180px; /* нижний  между блоками */
+}
+
+.indent-block-small {
+  margin-bottom: 120px;
 }
 
 .overlay {
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 1;
+  z-index: 1; 
+  top: 0;
+  left: 0;
   background-color: rgba(0, 0, 0, 0.6); /* черный фон, 60 % прозрачности
   нужно наложить сверху через z-index наверх посмотри как  */
 }
+
+
