--- a/styles/style.css
+++ b/styles/style.css
@@ -12,13 +12,9 @@
   min-height: 293px;
   justify-content: space-between;
   text-underline-offset: 4px;
-  
-  background: #67bdb1;
 }
 
 .header__menu-otn {
-  /* margin-left: 50px;
-  margin-top: -5px; */
   margin: -5px 0 0 50px;
 }
 
@@ -37,7 +33,6 @@
 .logo-otn {
   display: block;
   width: 135px;
-  /* height: 105px;  */
 }
 
 .header__address-otn {
@@ -53,50 +48,31 @@
   gap: 2px;
 }
 
-/* main */
-
-.main {
-  background: #0f1fff;
-}
-
 /* cover */
 
 .cover {
   position: relative;
   width: 100%;
   min-height: 757px;
-  /* height: 100vh; */
-  /* TODO: оптимизировать до background: #ff0000 url('image.jpg') no-repeat center / cover; */
-  /* background-image: url('/images/cover.jpg');
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover; */
-  background: url('/images/cover.jpg') no-repeat center / cover;
+  background: 
+  url('/images/cover.jpg') 
+  no-repeat center / cover;
   color: #fff;
 }
 
 .cover__size-title-otn {
-  /* display: flex; */
-  /* flex-wrap: wrap; */
-  /* justify-content: space-between; */
   font-weight: bold;
   min-height: 385px;
   width: 100%;
   max-width: 1000px;
   margin: 165px auto 0;
-  /* margin-top: 165px; */
   font-size: 100px;
   letter-spacing: 0.30em;
   line-height: 1.3em; 
-  /* TODO: добайвляй всему тексту line-height 
-  подогнать слова m + h по макету */
-  background: #000;
 }
 
 .cover__spans {
   display: block;
-  /* margin-left: 0; */
-  /* letter-spacing: 30px; */
 }
 
 .cover__span-start {
@@ -104,20 +80,13 @@
 }
 
 .cover__span-center {
-  /* margin: auto; */
   text-align: center;
-  padding-left: 28px;
-  padding-top: 3px;
-  /* padding-top: 1px;
-  padding-left: 1px;
-  padding-bottom: 1px;
-  padding-right: 1px; */
+  padding: 3px 0 0 28px;
 }
 
 .cover__span-end {
   text-align: right;
-  margin-right: -30px;
-  margin-top: 5px;
+  margin: 5px -30px 0 0;
 }
 
 .description {
@@ -127,7 +96,6 @@
   max-width: 1000px;
   margin: 98px auto 0;
   font-size: 22px;
-  background: rgba(240, 16, 16, 0.6);
 }
 
 .cover__text-things {
@@ -184,7 +152,6 @@
   align-items: center; 
   padding: 48px 40px;
   height: 100%;
-  
 }
 
 .card__text {
@@ -232,8 +199,6 @@
   max-width: 1052px;
   min-height: 595px;
   margin: 0 auto;
-
-  background: #eafa0a;
 }
 
 .block-logo-white {
@@ -260,11 +225,7 @@
   width: 100%;
   max-width: 693px;
   min-height: 452px;
-  /* margin-top: 133px;
-  margin-left: 25px; */
   margin: 133px 0 0 25px;
-
-  background: #ff8800;
 }
 
 .about__title {
@@ -282,15 +243,12 @@
 
 .footer {
   display: grid;
-  grid-template-columns: 292px 164px 240px; /* 265px 164px 240px; */
+  grid-template-columns: 292px 164px 240px; 
   grid-template-rows: auto;
   justify-content: space-between;
   padding: 0 50px;
   min-height: 180px;
   width: 100%;
-  /* text-underline-offset: 5px;  */
-
-  background: #1df539;
 }
 
 .footer__address-otn {
@@ -298,10 +256,7 @@
   flex-direction: column;
   align-items: flex-start;
   font-style: normal;
-  /* max-width: 265px; */
   min-height: 98px;
-  /* margin-right: 50px;
-  margin-top: 0px; */
   margin: 0 50px 0 0;
   justify-self: end;
   line-height: 1.3;
@@ -309,8 +264,7 @@
 }
 
 .footer__menu {
-  margin-left: -52px;
-  margin-top: 2px;
+  margin: 2px 0 0 -52px;
 }
 
 .footer__menu-list {
@@ -318,7 +272,7 @@
 }
 
 .footer__menu-list-item {
-  text-underline-offset: 2px; 
+  text-underline-offset: 2px; /* чтобы сделать полоску выше или ниже */
 }
 
 .footer__social-list-item {
@@ -349,11 +303,6 @@
   list-style-type: circle;
 }
 
-/* .list-marker-footer {
-  если понадобиться, но удобнее
-  универсальным св-ом list-no-marker
-} */
-
 .list-no-marker {
   list-style-type: none;
 }
@@ -370,7 +319,6 @@
 .font-list__underlined {
   text-decoration: underline;
   text-decoration-thickness: 1px;
-  /* text-underline-offset: 3px; чтобы сделать полоску выше или ниже */
 }
 
 .indent-block-big {
@@ -388,8 +336,7 @@
   z-index: 1; 
   top: 0;
   left: 0;
-  background-color: rgba(0, 0, 0, 0.6); /* черный фон, 60 % прозрачности
-  нужно наложить сверху через z-index наверх посмотри как  */
+  background-color: rgba(0, 0, 0, 0.6); /* черный фон, 60% прозрачности */
 }
 
 
