готовый код после внутренних тестов w3c, prettier и др

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,4 +1,3 @@
-
 /* basic styles */
 
 /* header */
@@ -7,10 +6,10 @@
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
   grid-template-rows: auto;
+  justify-content: space-between;
   align-items: center; /* выравнивание по вертикали */
   width: 100%;
   min-height: 293px;
-  justify-content: space-between;
   text-underline-offset: 4px;
 }
 
@@ -19,7 +18,7 @@
 }
 
 .list-marker-header {
-  display: flex;      
+  display: flex;
 }
 
 .list-marker-header li {
@@ -38,14 +37,14 @@
 .header__address-otn {
   display: flex;
   flex-direction: column;
+  justify-self: end;
   align-items: flex-start;
-  font-style: normal;
+  gap: 2px;
   max-width: 240px;
   min-height: 98px;
   margin-right: 50px;
-  justify-self: end;
+  font-style: normal;
   line-height: 1.3;
-  gap: 2px;
 }
 
 /* cover */
@@ -54,21 +53,19 @@
   position: relative;
   width: 100%;
   min-height: 757px;
-  background: 
-  url('/images/cover.jpg') 
-  no-repeat center / cover;
   color: #fff;
+  background: url("/images/cover.jpg") no-repeat center / cover;
 }
 
 .cover__size-title-otn {
-  font-weight: bold;
-  min-height: 385px;
   width: 100%;
   max-width: 1000px;
+  min-height: 385px;
   margin: 165px auto 0;
+  font-weight: bold;
   font-size: 100px;
-  letter-spacing: 0.30em;
-  line-height: 1.3em; 
+  line-height: 1.3em;
+  letter-spacing: 0.3em;
 }
 
 .cover__spans {
@@ -80,13 +77,13 @@
 }
 
 .cover__span-center {
-  text-align: center;
   padding: 3px 0 0 28px;
+  text-align: center;
 }
 
 .cover__span-end {
-  text-align: right;
   margin: 5px -30px 0 0;
+  text-align: right;
 }
 
 .description {
@@ -105,13 +102,13 @@
 
 .btn-see-all-lots {
   margin: 0;
-  padding: 12px 32px 11px 31px;
   border: 1px solid #fff;
-  background-color: transparent;
-  font: inherit;
+  padding: 12px 32px 11px 31px;
   color: inherit;
-  text-transform: inherit;
+  font: inherit;
   font-weight: 500;
+  text-transform: inherit;
+  background-color: transparent;
 }
 
 /* lots-otn */
@@ -129,8 +126,8 @@
 
 .lots__card-list {
   display: flex;
-  gap: 25px;
   flex-wrap: wrap;
+  gap: 25px;
 }
 
 .card__lots {
@@ -145,13 +142,13 @@
 }
 
 .card__article {
+  position: relative;
   display: flex;
-  position: relative; 
-  flex-direction: column;           
-  justify-content: space-between;   
-  align-items: center; 
-  padding: 48px 40px;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
   height: 100%;
+  padding: 48px 40px;
 }
 
 .card__text {
@@ -164,21 +161,15 @@
 }
 
 .block-lots__film {
-  background: 
-  url('/images/card-lot-01.jpg') 
-  no-repeat center / cover;
+  background: url("/images/card-lot-01.jpg") no-repeat center / cover;
 }
 
 .block-lots__book {
-  background: 
-  url('/images/card-lot-02.jpg') 
-  no-repeat center / cover;
+  background: url("/images/card-lot-02.jpg") no-repeat center / cover;
 }
 
 .block-lots__picture {
-  background: 
-  url('/images/card-lot-03.jpg') 
-  no-repeat center / cover;
+  background: url("/images/card-lot-03.jpg") no-repeat center / cover;
 }
 
 .lots__look-more-link__p {
@@ -186,7 +177,7 @@
 }
 
 .lots__look-more-link__link {
-  text-underline-offset: 5px;  
+  text-underline-offset: 5px;
 }
 
 /* about-auction */
@@ -207,25 +198,25 @@
   align-items: center;
   width: 240px;
   height: 240px;
-  border-radius: 50%; /* откругляет конец у фона*/
   margin: 35px auto 0;
+  border-radius: 50%; /* откругляет конец у фона*/
   background: #000;
 }
 
-.block-logo-white__black-background{
+.block-logo-white__black-background {
   display: block;
   width: 148px;
 }
 
 .about__column {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   justify-content: space-between;
-  word-wrap: break-word; /* разрешает перенос длинных слов */
   width: 100%;
   max-width: 693px;
   min-height: 452px;
   margin: 133px 0 0 25px;
+  word-wrap: break-word; /* разрешает перенос длинных слов */
 }
 
 .about__title {
@@ -234,7 +225,7 @@
 
 .about__text {
   display: flex;
-  flex-direction:column;
+  flex-direction: column;
   justify-content: space-between;
   gap: 24px;
 }
@@ -243,24 +234,24 @@
 
 .footer {
   display: grid;
-  grid-template-columns: 292px 164px 240px; 
+  grid-template-columns: 292px 164px 240px;
   grid-template-rows: auto;
   justify-content: space-between;
-  padding: 0 50px;
-  min-height: 180px;
   width: 100%;
+  min-height: 180px;
+  padding: 0 50px;
 }
 
 .footer__address-otn {
   display: flex;
   flex-direction: column;
+  justify-self: end;
   align-items: flex-start;
-  font-style: normal;
   min-height: 98px;
   margin: 0 50px 0 0;
-  justify-self: end;
+  font-style: normal;
   line-height: 1.3;
-  text-underline-offset: 5px; 
+  text-underline-offset: 5px;
 }
 
 .footer__menu {
@@ -331,12 +322,10 @@
 
 .overlay {
   position: absolute;
-  width: 100%;
-  height: 100%;
-  z-index: 1; 
   top: 0;
   left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.6); /* черный фон, 60% прозрачности */
 }
-
-
