исправление ошибок от ревьюера

--- a/styles/global.css
+++ b/styles/global.css
@@ -26,7 +26,8 @@ blockquote {
 }
 
 h1,
-h2 {
+h2,
+h3 {
   text-transform: uppercase;
 }
 
@@ -41,4 +42,5 @@ img {
 
 button {
   font: inherit;
+  cursor: pointer;
 }
