--- a/styles/style.css
+++ b/styles/style.css
@@ -5,16 +5,15 @@
 .header {
   display: grid;
   grid-template-columns: 1fr min-content 1fr;
-  grid-template-rows: auto;
+  grid-template-rows: 293px;
   justify-content: space-between;
   align-items: center; /* выравнивание по вертикали */
   width: 100%;
-  min-height: 293px;
   text-underline-offset: 4px;
 }
 
-.header__menu-otn {
-  margin: -5px 0 0 50px;
+.header__menu {
+  margin: 0px 0px 6px 50px;
 }
 
 .list-marker-header {
@@ -30,20 +29,20 @@
   margin-right: 0;
 }
 
-.logo-otn {
+.header__logo {
   display: block;
   width: 135px;
 }
 
-.header__address-otn {
+.header__address {
   display: flex;
   flex-direction: column;
   justify-self: end;
   align-items: flex-start;
   gap: 2px;
   max-width: 240px;
-  min-height: 98px;
   margin-right: 50px;
+  padding-bottom: 5px;
   font-style: normal;
   line-height: 1.3;
 }
@@ -53,16 +52,18 @@
 .cover {
   position: relative;
   width: 100%;
-  min-height: 757px;
+  min-height: 758px;
+  padding-top: 166px;
   color: #fff;
-  background: url("/images/cover.jpg") no-repeat center / cover;
+  background: url("../images/cover.jpg") no-repeat center / cover;
 }
 
-.cover__size-title-otn {
+.cover__title {
+  position: relative;
+  z-index: 2;
   width: 100%;
   max-width: 1000px;
-  min-height: 385px;
-  margin: 165px auto 0;
+  margin: 0 auto 0;
   font-weight: bold;
   font-size: 100px;
   line-height: 1.3em;
@@ -87,7 +88,9 @@
   text-align: right;
 }
 
-.description {
+.cover__description {
+  position: relative;
+  z-index: 2;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -112,12 +115,11 @@
   background-color: transparent;
 }
 
-/* lots-otn */
+/* lots */
 
-.lots-otn {
+.lots {
   width: 100%;
   max-width: 1052px;
-  min-height: 723px;
   margin: 0 auto;
 }
 
@@ -129,12 +131,12 @@
   display: flex;
   flex-wrap: wrap;
   gap: 25px;
+  margin-bottom: 29px;
 }
 
 .card__lots {
   width: 100%;
   max-width: 334px;
-  min-height: 596px;
   color: #fff;
 }
 
@@ -157,27 +159,26 @@
 }
 
 .card__title {
+  padding-bottom: 35px;
   font-size: 22px;
+  line-height: 1.18em;
   text-underline-offset: 3px;
 }
 
 .block-lots__film {
-  background: url("/images/card-lot-01.jpg") no-repeat center / cover;
+  background: url("../images/card-lot-01.jpg") no-repeat center / cover;
 }
 
 .block-lots__book {
-  background: url("/images/card-lot-02.jpg") no-repeat center / cover;
+  background: url("../images/card-lot-02.jpg") no-repeat center / cover;
 }
 
 .block-lots__picture {
-  background: url("/images/card-lot-03.jpg") no-repeat center / cover;
-}
-
-.lots__look-more-link__p {
-  padding: 30px 0 0 40px;
+  background: url("../images/card-lot-03.jpg") no-repeat center / cover;
 }
 
 .lots__look-more-link__link {
+  margin-left: 40px;
   text-underline-offset: 5px;
 }
 
@@ -189,7 +190,6 @@
   grid-template-rows: auto;
   width: 100%;
   max-width: 1052px;
-  min-height: 595px;
   margin: 0 auto;
 }
 
@@ -215,7 +215,6 @@
   justify-content: space-between;
   width: 100%;
   max-width: 693px;
-  min-height: 452px;
   margin: 133px 0 0 25px;
   word-wrap: break-word; /* разрешает перенос длинных слов */
 }
@@ -235,28 +234,29 @@
 
 .footer {
   display: grid;
-  grid-template-columns: 292px 164px 240px;
-  grid-template-rows: auto;
+  grid-template-columns: 292px max-content 240px;
+  grid-template-rows: 180px;
   justify-content: space-between;
   width: 100%;
-  min-height: 180px;
   padding: 0 50px;
 }
 
-.footer__address-otn {
+.footer__address {
   display: flex;
   flex-direction: column;
   justify-self: end;
   align-items: flex-start;
-  min-height: 98px;
   margin: 0 50px 0 0;
+  padding-bottom: 5px;
   font-style: normal;
-  line-height: 1.3;
+  line-height: 1.36;
+  text-underline-offset: 5px;
   text-underline-offset: 5px;
 }
 
 .footer__menu {
-  margin: 2px 0 0 -52px;
+  margin-left: 1px;
+  padding: 2px 53px 0px 0px;
 }
 
 .footer__menu-list {
@@ -264,7 +264,7 @@
 }
 
 .footer__menu-list-item {
-  text-underline-offset: 2px; /* чтобы сделать полоску выше или ниже */
+  text-underline-offset: 3px; /* чтобы сделать полоску выше или ниже */
 }
 
 .footer__social-list-item {
@@ -281,7 +281,7 @@
 /* for multiple use */
 
 .bold-title {
-  font-family: Raleway;
+  font-family: Raleway, Arial, sans-serif;
   font-weight: bold;
   font-size: 40px;
 }
